--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1089,7 +1089,7 @@ span.menu{
 	z-index: 9999;
 	left: 0%;
 	margin: 3.7em 0;
-	background:#fc5c5c;
+	background:#045c2a;
 }
 .top-nav span.icon {
 	display: block;
